<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cyanide Viewer</string>

    <!-- Menus -->
    <string name="menu_settings">Settings</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_navigation">Navigation</string>

    <!-- Activities -->
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preferences - Basic -->
    <string name="pref_basic_settings_title">Basic</string>
    <string name="pref_preserve_data_usage">Preserve data usage</string>
    <string name="pref_preserve_data_usage_summary">
        Downloads every comic you view, reducing data usage. This may, however, take up more storage
        space on your phone
    </string>
    <string name="pref_night_mode">Night mode</string>
    <string name="pref_night_mode_summary">
        Change the main colors of the app to make it easier
        to read during the night
    </string>
    <string name="pref_save_ext_sdcard">Use external SD card</string>
    <string name="pref_save_ext_sdcard_summary">
        External SD cards usually contain more storage space, so by keeping
        your downloaded comics on here, you leave more space for other apps and games
    </string>

    <!-- Preferences - Advanced -->
    <string name="pref_advanced_settings_title">Advanced</string>

    <string name="action_settings">Settings</string>
    <string name="pref_delete_comics">Delete downloaded comics</string>
    <string name="pref_delete_comics_summary">
        Deletes all the comics that you\'ve downloaded. This process cannot be undone.
    </string>
    <string name="pref_wipe_db">Wipe database</string>
    <string name="pref_wipe_db_summary">
        Clears everything this app knows about the C&amp;H comics you\'ve seen. This process can not
        be undone, nor is it recommended.
    </string>

    <!-- Font Awesome icons -->
    <string name="icon_facebook">&#xf09a;</string>
    <string name="icon_twitter">&#xf099;</string>
    <string name="nav_hint">Comic ID (%1$d to %2$d)</string>
    <string name="desc_nav_random">Random comic</string>
    <string name="desc_favorite_icon">Icon for comic</string>
    <string name="desc_nav_first">First comic</string>
    <string name="desc_nav_newest">Newest comic</string>
    <string name="desc_more_info">More information</string>
    <string name="desc_download">Download the comic</string>
    <string name="desc_author_icon">Author icon</string>
    <string name="desc_image_view">Comic</string>
</resources>
