<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:title="@string/pref_basic_settings_title">
        <CheckBoxPreference
            android:key="pref_preserve_data_usage"
            android:title="@string/pref_preserve_data_usage"
            android:summary="@string/pref_preserve_data_usage_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="pref_night_mode"
            android:title="@string/pref_night_mode"
            android:summary="@string/pref_night_mode_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="pref_save_ext_sdcard"
            android:title="@string/pref_save_ext_sdcard"
            android:summary="@string/pref_save_ext_sdcard_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_advanced_settings_title">

        <Preference
            android:key="pref_delete_comics"
            android:title="@string/pref_delete_comics"
            android:summary="@string/pref_delete_comics_summary" />

        <Preference
            android:key="pref_wipe_db"
            android:title="@string/pref_wipe_db"
            android:summary="@string/pref_wipe_db_summary" />

    </PreferenceCategory>


</PreferenceScreen>